force-app/main/default/objects/IR_Document__c/IR_Document__c.object-meta.xml
<CustomObject>
    <description>Document repository record for the DPEG Investor Relations app. Categorizes investor-facing documents (PPM, Sub Doc, K-1, reports, notices, transfer agreements) and controls portal visibility. Offering and Investing Entity links are optional (null = applies to all).</description>
    <label>IR Document</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>IR Document Name</label>
        <startingNumber>435</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IR Documents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>