force-app/main/default/objects/IR_Document__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <description>Document category used to organize the investor document repository.</description>
    <inlineHelpText>Select the document category.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PPM</fullName>
            </value>
            <value>
                <fullName>Sub Doc</fullName>
            </value>
            <value>
                <fullName>K-1</fullName>
            </value>
            <value>
                <fullName>Quarterly Rpt</fullName>
            </value>
            <value>
                <fullName>Dist Notice</fullName>
            </value>
            <value>
                <fullName>Transfer Agmt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>