force-app/main/default/objects/IR_Document__c/fields/Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Document_URL__c</fullName>
    <label>Document URL</label>
    <description>Link to the stored file (Salesforce Files or external OneDrive location).</description>
    <inlineHelpText>Paste the link to the stored document.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>