force-app/main/default/objects/IR_Document__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <label>File Name</label>
    <description>Name of the stored document file.</description>
    <inlineHelpText>Enter the file name (e.g., PPM_Magnolia_v3.pdf).</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>