force-app/main/default/objects/IR_Document__c/fields/Investing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Investing_Entity__c</fullName>
    <label>Investing Entity</label>
    <description>Investing entity (Account) this document is scoped to. Leave blank to apply to all investors.</description>
    <inlineHelpText>Select the investing-entity Account, or leave blank for all investors.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>IR Documents</relationshipLabel>
    <relationshipName>IR_Documents</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>