force-app/main/default/objects/IR_Document__c/fields/Offering__c.field-meta.xml
<CustomField>
    <fullName>Offering__c</fullName>
    <label>Offering</label>
    <description>Offering this document relates to. Leave blank to apply the document to all offerings.</description>
    <inlineHelpText>Select the related offering, or leave blank for all offerings.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Offering__c</referenceTo>
    <relationshipLabel>IR Documents</relationshipLabel>
    <relationshipName>IR_Documents</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>