force-app/main/default/objects/IR_Document__c/fields/Portal_Visible__c.field-meta.xml
<CustomField>
    <fullName>Portal_Visible__c</fullName>
    <label>Portal Visible</label>
    <description>Controls whether this document is visible to investors in the portal.</description>
    <inlineHelpText>Checked when the document should be visible to investors in the portal.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>