force-app/main/default/objects/IR_Document__c/fields/Uploaded_Date__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_Date__c</fullName>
    <label>Uploaded Date</label>
    <description>Date the document was uploaded to the repository.</description>
    <inlineHelpText>Enter the date the document was uploaded.</inlineHelpText>
    <type>Date</type>
</CustomField>