force-app/main/default/objects/IR_Document__c/listViews/By_Category.listView-meta.xml
<ListView>
    <fullName>By_Category</fullName>
    <label>All Documents by Category</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>File_Name__c</columns>
    <columns>Category__c</columns>
    <columns>Offering__c</columns>
    <columns>Portal_Visible__c</columns>
</ListView>